CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_failr__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_failr</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_failr</externalName>
    <fields>
        <fullName>cde_reason_failr_eligty_indiv__c</fullName>
        <description>cde_reason_failr_eligty_indiv</description>
        <externalDeveloperName>cde_reason_failr_eligty_indiv</externalDeveloperName>
        <label>Individual Ineligibility Reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_failr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_doc__c</fullName>
        <description>idn_doc</description>
        <externalDeveloperName>idn_doc</externalDeveloperName>
        <label>Document Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Number Eligtyuence fcompsnory</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Reasons</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_failr</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_failr__c</fullName>
        <description>idn_indiv_eligty_failr</description>
        <externalDeveloperName>idn_indiv_eligty_failr</externalDeveloperName>
        <label>Number Eligtyuence fcompsnory Indiv fail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Individual Eligibility ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Reasons</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_failr</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ind_updtd_user__c</fullName>
        <description>ind_updtd_user</description>
        <externalDeveloperName>ind_updtd_user</externalDeveloperName>
        <label>User updated data</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_failr1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Eligibility Reasons</label>
    <pluralLabel>Individual Eligibility Reasons</pluralLabel>
</CustomObject>